Add resource file

--- a/OrganizadorReuniao/Views/Calling/Create.cshtml
+++ b/OrganizadorReuniao/Views/Calling/Create.cshtml
@@ -25,6 +25,11 @@
         <div id="result"></div>
     </div>
     
+    <div class="form-group">
+        <label for="date">Data</label>
+        <input type="date" name="date" id="date" class="form-control" />
+    </div>
+    
     @Html.ValidationSummary("Favor verificar erros abaixo", new { @class = "alert alert-danger" })
     
     <hr />
