--- a/OrganizadorReuniao/Views/Account/Success.cshtml
+++ b/OrganizadorReuniao/Views/Account/Success.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "Sucesso";
+    ViewBag.Title = OrganizadorReuniao.Languages.pt_br.Success;
 }
 
 <div class="page-header">
-    <h2>Sucesso</h2>
+    <h2>@OrganizadorReuniao.Languages.pt_br.Success</h2>
 </div>
 
 <div class="alert alert-success">
-    <p>Sua conta foi criada com sucesso.</p>
-    <p>@Html.ActionLink("Clique aqui", "Login") para entrar no sistema.</p>
+    <p>@OrganizadorReuniao.Languages.pt_br.YourAccountWasCreatedSuccessfully</p>
+    <p>@Html.ActionLink(OrganizadorReuniao.Languages.pt_br.ClickHere, "Login") @OrganizadorReuniao.Languages.pt_br.ToEnterTheSystem</p>
 </div>
