--- a/OrganizadorReuniao/Views/Unit/Success.cshtml
+++ b/OrganizadorReuniao/Views/Unit/Success.cshtml
@@ -1,11 +1,11 @@
 ﻿@{
-    ViewBag.Title = "Sucesso";
+    ViewBag.Title = OrganizadorReuniao.Languages.pt_br.Success;
 }
 
 <div class="page-header">
-    <h2>Sucesso</h2>
+    <h2>@OrganizadorReuniao.Languages.pt_br.Success</h2>
 </div>
 
 <div class="alert alert-success">
-    <p>Unidade criada com sucesso.</p>
+    <p>@OrganizadorReuniao.Languages.pt_br.UnitCreatedSuccessfully</p>
 </div>
