--- a/OrganizadorReuniao/Views/Account/Create.cshtml
+++ b/OrganizadorReuniao/Views/Account/Create.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OrganizadorReuniao.Models.UserViewModel
 @{
-    ViewBag.Title = "Criar Conta";
+    ViewBag.Title = OrganizadorReuniao.Languages.pt_br.CreateAccountTitle;
 }
 
 <div class="page-header">
@@ -12,24 +12,24 @@
     <div class="form-group">
         @Html.LabelFor(m => m.Email)
         @Html.EditorFor(m => m.Email)
-        @Html.ValidationMessageFor(m => m.Email) 
+        @Html.ValidationMessageFor(m => m.Email)
     </div>
     
     <div class="form-group">
         @Html.LabelFor(m => m.Password)
-        @Html.PasswordFor(m => m.Password, new { placeholder = "Digite sua senha" })
-        @Html.ValidationMessageFor(m => m.Password) 
+        @Html.PasswordFor(m => m.Password, new { placeholder = OrganizadorReuniao.Languages.pt_br.TypeYourPassword })
+        @Html.ValidationMessageFor(m => m.Password)
     </div>
     
     <div class="form-group">
         @Html.LabelFor(m => m.Confirm)
-        @Html.PasswordFor(m => m.Confirm, new { placeholder = "Confirmar sua senha" })
-        @Html.ValidationMessageFor(m => m.Confirm) 
+        @Html.PasswordFor(m => m.Confirm, new { placeholder = OrganizadorReuniao.Languages.pt_br.ConfirmYourPassword })
+        @Html.ValidationMessageFor(m => m.Confirm)
     </div>
     
-    @Html.ValidationSummary("Favor verificar erros abaixo", new { @class = "alert alert-danger" })
+    @Html.ValidationSummary(OrganizadorReuniao.Languages.pt_br.PleaseCheckTheFollowingErrors, new { @class = "alert alert-danger" })
     
     <hr />
     
-    <button type="submit" class="btn btn-default">Criar</button>
+    <button type="submit" class="btn btn-default">@OrganizadorReuniao.Languages.pt_br.CreateButton</button>
 }
