--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     bool authenticated = (Session["user"] != null);
-    // TODO: change strings tp resource names
+        // TODO: change strings tp resource names
 }
 <!DOCTYPE html>
 <html>
@@ -8,10 +8,53 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
+    <script type="text/javascript">
+        // When ready...
+        window.addEventListener("load", function () {
+            // Set a timeout...
+            setTimeout(function () {
+                // Hide the address bar!
+                window.scrollTo(0, 1);
+            }, 0);
+        });
+
+        $(document).ready(function () {
+            if (("standalone" in window.navigator) && window.navigator.standalone) {
+                // For iOS Apps
+                $('a').on('click', function (e) {
+                    e.preventDefault();
+                    var new_location = $(this).attr('href');
+                    if (new_location != undefined && new_location.substr(0, 1) != '#' && $(this).attr('data-method') == undefined) {
+                        window.location = new_location;
+                    }
+                });
+            }
+        });
+    </script>
+
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 <body>
     <!-- Fixed navbar -->
@@ -44,7 +87,7 @@
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">Funcionalidades</li>
                                 <li><a href="/Calling/Create">Chamados</a></li>
-                                <li><a href="#">One more separated link</a></li>
+                                <li><a href="/Memo">Criar Ata</a></li>
                             </ul>
                         </li>
                     }
