--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -13,30 +13,6 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link href="~/Content/bootstrap.min.css" rel="stylesheet" />
-    <script type="text/javascript">
-        // When ready...
-        window.addEventListener("load", function () {
-            // Set a timeout...
-            setTimeout(function () {
-                // Hide the address bar!
-                window.scrollTo(0, 1);
-            }, 0);
-        });
-
-        $(document).ready(function () {
-            if (("standalone" in window.navigator) && window.navigator.standalone) {
-                // For iOS Apps
-                $('a').on('click', function (e) {
-                    e.preventDefault();
-                    var new_location = $(this).attr('href');
-                    if (new_location != undefined && new_location.substr(0, 1) != '#' && $(this).attr('data-method') == undefined) {
-                        window.location = new_location;
-                    }
-                });
-            }
-        });
-    </script>
-
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
@@ -119,5 +95,32 @@
     <script src="~/Scripts/bootstrap.min.js"></script>
     @RenderSection("scripts", required: false)
     <script src="~/Scripts/app.js" type="text/javascript"></script>
+
+    <script type="text/javascript">
+        // When ready...
+        window.addEventListener("load", function () {
+            // Set a timeout...
+            setTimeout(function () {
+                // Hide the address bar!
+                window.scrollTo(0, 1);
+            }, 0);
+        });
+
+        $(document).ready(function () {
+            if (("standalone" in window.navigator) && window.navigator.standalone) {
+                var noddy, remotes = false;
+                document.addEventListener('click', function (event) {
+                    noddy = event.target;
+                    while (noddy.nodeName !== "A" && noddy.nodeName !== "HTML") {
+                        noddy = noddy.parentNode;
+                    }
+                    if ('href' in noddy && noddy.href.indexOf('http') !== -1 && (noddy.href.indexOf(document.location.host) !== -1 || remotes)) {
+                        event.preventDefault();
+                        document.location.href = noddy.href;
+                    }
+                }, false);
+            }
+        });
+    </script>
 </body>
 </html>
