--- a/OrganizadorReuniao/Content/Site.css
+++ b/OrganizadorReuniao/Content/Site.css
@@ -59,3 +59,9 @@ textarea {
 .validation-summary-valid {
     display: none;
 }
+
+.footer {
+    background-color: #f5f5f5;
+    height: 60px;
+    width: 100%;
+}
