--- a/OrganizadorReuniao/Views/Home/Index.cshtml
+++ b/OrganizadorReuniao/Views/Home/Index.cshtml
@@ -1,13 +1,14 @@
 ﻿@{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Lista de Frequência";
     OrganizadorReuniao.Models.Member member = new OrganizadorReuniao.Models.Member();
 }
 
 @section scripts {
     <script type="text/javascript">
+        var sum = 0;
         var ajax_request;
         function updateMembersList() {
-
+            sum = 0;
             if (typeof ajax_request !== 'undefined')
                 ajax_request.abort();
 
@@ -31,9 +32,11 @@
                                 html += "<tr onclick='markMember(" + count + ")'>";
                                 html += "<td>" + value.LastName + ", " + value.FirstName + "</td>";
                                 html += "<td>" + value.FormatedDate + "</td>";
-                                html += "<td style='text-align: center;'><input onclick=\"markMember(" + count + ")\" type='checkbox' value='" + value.Id + "' id='input_" + count + "'";
+                                html += "<td style='text-align: center;'><input onclick=\"markMember(" + count + ")\" type='checkbox' value='" + value.Id + "' id='input_" + count + "' class='checks' ";
                                 if (value.Present) {
                                     html += " checked='checked' ";
+                                    sum = sum + 1;
+                                    $("#countPresent").html(sum);
                                 }
                                 html += " /></td></tr>";
                                 count++;
@@ -63,6 +66,14 @@
 
             // save data
             $.getJSON("/JSON/SaveData", "member=" + value + "&present=" + present + "&type=" + type + "&date=" + date, function (data) {
+                sum = 0;
+                $(".checks").each(function () {
+                    var isImportant = $(this).prop('checked');
+                    if (isImportant) {
+                        sum++;
+                    }
+                    $("#countPresent").html(sum);
+                });
             });
         }
 
@@ -78,22 +89,26 @@
     </script>
 }
 
-<div class="row">
-    <label for="date">Data dd/mm/aaaa</label>
-    <input type="date" name="date" id="date" class="form-control" value="@(DateTime.Now.ToString("dd/MM/yyyy"))" onchange="updateMembersList();" />
-    <label for="frequencyType">Tipo de lista</label>
-    <select id="frequencyType" name="frequencyType" class="form-control" onchange="updateMembersList();">
-        @foreach (OrganizadorReuniao.Models.Frequency frequency in new OrganizadorReuniao.Models.Frequency().getTypes())
-        {
-            <option value="@frequency.Id">@frequency.Name</option>
-        }
-    </select>
+<div class="page-header">
+    <h2>Lista de Frequência</h2>
 </div>
 
-<div class="row" style="text-align: center;">
-    <br />
-    <img src="~/Images/ajax-loader.gif" style="margin: auto; display: none;" id="loading" />
-</div>
+    <div class="row" style="padding: 10px;">
+        <label for="date">Data dd/mm/aaaa</label>
+        <input type="date" name="date" id="date" class="form-control" value="@(DateTime.Now.ToString("dd/MM/yyyy"))" onchange="updateMembersList();" />
+        <label for="frequencyType">Tipo de lista</label>
+        <select id="frequencyType" name="frequencyType" class="form-control" onchange="updateMembersList();">
+            @foreach (OrganizadorReuniao.Models.Frequency frequency in new OrganizadorReuniao.Models.Frequency().getTypes())
+            {
+                <option value="@frequency.Id">@frequency.Name</option>
+            }
+        </select>
+    </div>
+
+    <div class="row" style="text-align: center; padding: 10px;">
+        <br />
+        <img src="~/Images/ajax-loader.gif" style="margin: auto; display: none;" id="loading" />
+    </div>
 
 <hr />
 
@@ -111,4 +126,5 @@
 
 <div class="row">
     <p style="text-align: center;"><span id="count">0</span> membro(s) encontrado(s)</p>
+    <p style="text-align: center;"><span id="countPresent">0</span> membro(s) presente(s)</p>
 </div>
