--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -44,8 +44,9 @@
                     <li><a href="#contact">Contato</a></li>*@
                     @if (authenticated)
                     {
-                        <li><a href="/Report">Relatório</a></li>
                         <li><a href="/Home/Index">Frequência</a></li>
+                        <li><a href="/Member/Index">Novo Membro</a></li>
+                        <li><a href="/Report">Relatório</a></li>
                         @*<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Configuracoes <span class="caret"></span></a>
                             <ul class="dropdown-menu">
