--- a/OrganizadorReuniao/Views/Home/Index.cshtml
+++ b/OrganizadorReuniao/Views/Home/Index.cshtml
@@ -26,21 +26,25 @@
                     data: "typeId=" + id + "&date=" + date,
                     cache: false,
                     success: function (data) {
+                        $("#countPresent").html("0");
+                        $("#countPresent2").html("0");
                         var html = "";
                         if (data.length > 0) {
                             $.each(data, function (index, value) {
-                                html += "<tr onclick='markMember(" + count + ")'";
+                                html += "<tr ";
                                 if (!value.isUnitMember) {
                                     html += " class='warning' ";
                                 }
                                 html += " >";
-                                html += "<td>" + value.LastName + ", " + value.FirstName + "</td>";
-                                html += "<td>" + value.FormatedDate + "</td>";
-                                html += "<td style='text-align: center;'><input style='display: none;' onclick=\"markMember(" + count + ")\" type='checkbox' value='" + value.Id + "' id='input_" + count + "' class='checks' ";
+                                html += "<td><img src='/Images/Pencil-icon.png' title='Editar membro' style='display: block; cursor: pointer;' onclick='editMember(" + value.Id + ")' /></td>";
+                                html += "<td onclick='markMember(" + count + ")'>" + value.LastName + ", " + value.FirstName + "</td>";
+                                html += "<td onclick='markMember(" + count + ")'>" + value.FormatedDate + "</td>";
+                                html += "<td onclick='markMember(" + count + ")' style='text-align: center;'><input style='display: none;' onclick=\"markMember(" + count + ")\" type='checkbox' value='" + value.Id + "' id='input_" + count + "' class='checks' ";
                                 if (value.Present) {
                                     html += " checked='checked' ";
                                     sum = sum + 1;
                                     $("#countPresent").html(sum);
+                                    $("#countPresent2").html(sum);
                                 }
                                 html += " />";
                                 if (value.Present) {
@@ -57,6 +61,7 @@
                         }
                         $("#tbody").html(html);
                         $("#count").html(count);
+                        $("#count2").html(count);
                         loadAnimation(false);
                     }
                 });
@@ -90,6 +95,7 @@
                         sum++;
                     }
                     $("#countPresent").html(sum);
+                    $("#countPresent2").html(sum);
                 });
             });
         }
@@ -101,6 +107,13 @@
                 $("#count").html("0");
             } else {
                 $("#loading").hide();
+            }
+        }
+
+        function editMember(id) {
+            var confirmation = confirm('Clique OK para editar os dados\n\nVocê será redirecionado para outra tela');
+            if (confirmation) {
+                location.href = "/Member/Edit/" + id;
             }
         }
     </script>
@@ -129,9 +142,15 @@
 
 <hr />
 
+<div class="row">
+    <p style="text-align: center;"><span id="count2">0</span> membro(s) encontrado(s)</p>
+    <p style="text-align: center;"><span id="countPresent2">0</span> membro(s) presente(s)</p>
+</div>
+
 <table class="table table-striped datatable">
     <thead>
         <tr>
+            <th></th>
             <th>Nome</th>
             <th>Nasc.</th>
             <th></th>
