Save data from memo to the database

--- a/OrganizadorReuniao/Views/Shared/_Layout.cshtml
+++ b/OrganizadorReuniao/Views/Shared/_Layout.cshtml
@@ -44,6 +44,9 @@
                     <li><a href="#contact">Contato</a></li>*@
                     @if (authenticated)
                     {
+                        <li><a href="/Memo/Index">Agenda</a></li>
+                        <li><a href="/Activities/Index">Atividades</a></li>
+                        <li><a href="/Calling/Index">Chamados</a></li>
                         <li><a href="/Home/Index">Frequência</a></li>
                         <li><a href="/Member/Index">Novo Membro</a></li>
                         <li><a href="/Report">Relatório</a></li>
